--- a/res/css/style.css
+++ b/res/css/style.css
@@ -2,3 +2,22 @@ body {
   margin: 0;
   padding: 0;
 }
+
+#menu {
+  position: absolute;
+  margin-left: 0;
+  margin-top: 0;
+  width: 100%;
+  height:100%;
+  background-color: #000;
+  opacity: 0.6;
+  z-index: 10;
+}
+
+#play {
+  position: absolute;
+  left: 13%;
+  top: 44%;
+  width: 22%;
+  height: 22%;
+}
