--- a/res/css/style.css
+++ b/res/css/style.css
@@ -20,14 +20,8 @@ body {
   position: absolute;
   left: 13%;
   top: 44%;
-  width: 22%;
-  height: 22%;
-  cursor: pointer;
 }
 
-#play:hover {
-  font-size: 90px;
-}
 
 h1 {
   margin-left: 40px;
@@ -35,5 +29,4 @@ h1 {
 }
 
 h2 {
-  font-size: 80px;
-}
+  font-size: 80px;}
