--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,4 +1,45 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
+
+#menu {
+  color: #ffffff;
+  position: absolute;
+  margin-left: 0;
+  margin-top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.6;
+  z-index: 10;
+}
+
+#play {
+  position: absolute;
+  left: 13%;
+  top: 44%;
+}
+
+#endGame {
+  position: absolute;
+  left: 13%;
+  top: 44%;
+  width: 50%;
+  height: 50%;
+  opacity: 0.6;
+  z-index: -10;
+}
+
+#lostMessage {
+  color: #FFF;
+}
+
+h1 {
+  margin-left: 40px;
+  font-size: 128px;
+}
+
+h2 {
+  font-size: 80px;}
